clusters/hybrid01/config/argocd/argocd-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
  annotations:
    traffic.sidecar.istio.io/excludeOutboundIPRanges: 172.43.0.1/32
