clusters/hybrid01/config/argocd/argocd-peerauth.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: strict
  namespace: argocd
spec:
  mtls:
    mode: STRICT
