clusters/hybrid01/config/argocd/argocd-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-external
  namespace: argocd
spec:
  hosts:
    - "argo.jkulzer.dev"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - route:
    - destination:
        host: argo-cd-argocd-server
        port:
          number: 80
